--- a/vacancy_parser/templates/scripts/detail.html
+++ b/vacancy_parser/templates/scripts/detail.html
@@ -14,6 +14,15 @@
             >
                 <i class="fas fa-play me-1"></i>Запустить скрипт
             </button>
+            {% if last_run and last_run.total_found > 0 %}
+            <a 
+                href="{% url 'scripts:export_excel' script.id %}" 
+                class="btn btn-outline-primary"
+                title="Экспортировать результаты последнего запуска в Excel"
+            >
+                <i class="fas fa-file-excel me-1"></i>Экспорт Excel
+            </a>
+            {% endif %}
         </div>
     </div>
 </div>
@@ -58,7 +67,12 @@
                             </tr>
                             <tr>
                                 <th>Автор:</th>
-                                <td>{{ script.created_by.username }}</td>
+                                <td>
+                                    {{ script.created_by.username }}
+                                    {% if user_role %}
+                                        <small class="text-muted">({{ user_role }})</small>
+                                    {% endif %}
+                                </td>
                             </tr>
                         </table>
                     </div>
@@ -121,8 +135,11 @@
                     <a href="{% url 'scripts:vacancies' last_run.id %}?filter=existing" class="btn btn-outline-info me-md-2">
                         <i class="fas fa-list me-1"></i>Посмотреть существующие
                     </a>
-                    <a href="{% url 'scripts:vacancies' last_run.id %}" class="btn btn-outline-secondary">
+                    <a href="{% url 'scripts:vacancies' last_run.id %}" class="btn btn-outline-secondary me-md-2">
                         <i class="fas fa-list me-1"></i>Все вакансии
+                    </a>
+                    <a href="{% url 'scripts:export_excel' script.id %}" class="btn btn-primary">
+                        <i class="fas fa-file-excel me-1"></i>Экспорт в Excel
                     </a>
                 </div>
                 {% endif %}
